# agentityServer_solana

./: .env.example  .gitignore  Anchor.toml  BACKEND_TESTING.md  CODEBASE_OVERVIEW.md  DEMO_GUIDE.md  FRONTEND_INTEGRATION_CONTRACT.md  README.md  SOLANA_SETUP.md  package-lock.json  package.json
apps/client/: .env.example  README.md  index.html  package.json
apps/client/src/: App.jsx  index.css
apps/client/src/constants/: AlertData.js  landingPageAgentData.js  navItem.js  transactionData.js
apps/client/src/helper/: formatDate.js
apps/client/src/layouts/: AppLayouts.jsx
apps/client/src/pages/: AiAgentPage.jsx  AlertPage.jsx  DashboardPage.jsx  Documentation.jsx  LandingPage.jsx  SimulationPage.jsx  SmartContract.jsx  Transaction.jsx
db/: schema.sql
programs/agentity_registry/: Cargo.toml  README.md
programs/agentity_registry/src/: lib.rs
scripts/: demo.js  smoke-backend.js
src/: app.js  server.js
src/config/: database.js  logger.js  solana.js
src/docs/: swagger.js
src/models/: agent.js  agentBehaviorLog.js  agentSolanaProof.js  agentSolanaRegistry.js  agentWallet.js  index.js  paymentRecord.js
src/routes/: agents.js  dashboard.js  execution.js  integrations.js  payments.js  settings.js  simulation.js  solana.js  system.js  tasks.js  transactions.js  wallets.js
src/services/integrations/: integrationService.js
src/services/settings/: settingsService.js
src/services/solana/: client.js  paymentService.js  registryService.js  walletService.js
src/utils/: validation.js
test/: settingsService.test.js  solanaClient.test.js
(+36 files in other folders)
