[package]
name = "agentity_registry"
version = "0.1.0"
description = "Solana registry program for Agentity AI agent identity and audit proofs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agentity_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
